; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/isci/extr_remote_node_context.c_sci_remote_node_context_construct.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/isci/extr_remote_node_context.c_sci_remote_node_context_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sci_remote_node_context = type { i32, i32, i32 }

@RNC_DEST_UNSPECIFIED = common dso_local global i32 0, align 4
@sci_remote_node_context_state_table = common dso_local global i32 0, align 4
@SCI_RNC_INITIAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sci_remote_node_context_construct(%struct.sci_remote_node_context* %0, i32 %1) #0 {
  %3 = alloca %struct.sci_remote_node_context*, align 8
  %4 = alloca i32, align 4
  store %struct.sci_remote_node_context* %0, %struct.sci_remote_node_context** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.sci_remote_node_context*, %struct.sci_remote_node_context** %3, align 8
  %6 = call i32 @memset(%struct.sci_remote_node_context* %5, i32 0, i32 12)
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.sci_remote_node_context*, %struct.sci_remote_node_context** %3, align 8
  %9 = getelementptr inbounds %struct.sci_remote_node_context, %struct.sci_remote_node_context* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* @RNC_DEST_UNSPECIFIED, align 4
  %11 = load %struct.sci_remote_node_context*, %struct.sci_remote_node_context** %3, align 8
  %12 = getelementptr inbounds %struct.sci_remote_node_context, %struct.sci_remote_node_context* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.sci_remote_node_context*, %struct.sci_remote_node_context** %3, align 8
  %14 = getelementptr inbounds %struct.sci_remote_node_context, %struct.sci_remote_node_context* %13, i32 0, i32 0
  %15 = load i32, i32* @sci_remote_node_context_state_table, align 4
  %16 = load i32, i32* @SCI_RNC_INITIAL, align 4
  %17 = call i32 @sci_init_sm(i32* %14, i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @memset(%struct.sci_remote_node_context*, i32, i32) #1

declare dso_local i32 @sci_init_sm(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
